--- a/miniprogram-music/app.json
+++ b/miniprogram-music/app.json
@@ -1,36 +1,37 @@
 {
-  "pages":[
+  "pages": [
     "pages/video/video",
     "pages/index/index",
     "pages/logs/logs",
-    "pages/me/me"
+    "pages/me/me",
+    "pages/login/login"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#d43b33",
     "navigationBarTitleText": "music",
-    "navigationBarTextStyle":"white"
+    "navigationBarTextStyle": "white"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json",
-  "tabBar":{
+  "tabBar": {
     "selectedColor": "#fa466c",
     "color": "#8f9396",
-    "list":[
+    "list": [
       {
-        "pagePath":"pages/index/index",
+        "pagePath": "pages/index/index",
         "iconPath": "static/images/tabs/tab-home.png",
         "selectedIconPath": "static/images/tabs/tab-home-current.png",
         "text": "主页"
       },
       {
-        "pagePath":"pages/video/video",
+        "pagePath": "pages/video/video",
         "iconPath": "static/images/tabs/select.png",
         "selectedIconPath": "static/images/tabs/selected.png",
         "text": "视频"
       },
       {
-        "pagePath":"pages/me/me",
+        "pagePath": "pages/me/me",
         "iconPath": "static/images/tabs/tab-my.png",
         "selectedIconPath": "static/images/tabs/tab-my-current.png",
         "text": "个人中心"
